update packages and webpack config to load image files and import to main.js

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="col col-9" id="mapDiv">
-        <img src={map} alt="the pandemic map">
+        <!-- <img src="./map.jpg" alt="the pandemic map"> -->
         </div>
       </div>
       <div id="gameOverDiv">
