add interactive mapbox to page

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
     <title>Team Pandemic</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div id="pageHeadingDiv">      
         <h1>Pandemic</h1>
         <p>save the world from disease</p>
