--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <hr>
       </div>
       <div class="row" id="gameBoardDiv">
-        <div class="col col-3" id="scoreBoardDiv">
+        <div class="col col-2" id="scoreBoardDiv">
           <div id="statsDiv">
             <h4>Game Statistics</h4>
             <p><span id="currentMonth">February</span> <span id="currentYear">2020</span></p>
@@ -23,41 +23,45 @@
                 <th>Infection Level</th>
               </thead>
               <tbody>
+                  <tr>
+                    <td>Baghdad</td>
+                    <td id="city-4-disease">0</td>
+                  </tr>
                 <tr>
-                  <td>Beijing</td>
-                  <td id="Beijing-disease">0</td>
-                </tr>
-                <tr>
-                  <td>Cairo</td>
-                  <td id="Cairo-disease">0</td>
+                  <td>Bangkok</td>
+                  <td id="city-5-disease">0</td>
                 </tr>
                 <tr>
                   <td>Los Angeles</td>
-                  <td id="LosAngeles-disease">0</td>
+                  <td id="city-8-disease">0</td>
                 </tr>
                 <tr>
                   <td>Moscow</td>
-                  <td id="Moscow-disease">0</td>
+                  <td id="city-9-disease">0</td>
+                </tr>
+                <tr>
+                  <td>Nairobi</td>
+                  <td id="city-6-disease">0</td>
                 </tr>
                 <tr>
                   <td>Paris</td>
-                  <td id="Paris-disease">0</td>
+                  <td id="city-1-disease">0</td>
                 </tr>
                 <tr>
                   <td>Rio de Janeiro </td>
-                  <td id="Rio-disease">0</td>
+                  <td id="city-7-disease">0</td>
                 </tr>
                 <tr>
                   <td>Seattle</td>
-                  <td id="seattle-disease">0</td>
+                  <td id="city-2-disease">0</td>
                 </tr>
                 <tr>
                   <td>Tokyo</td>
-                  <td id="Tokyo-disease">0</td>
+                  <td id="city-0-disease">0</td>
                 </tr>
                 <tr>
                   <td>Toronto</td>
-                  <td id="Toronto-disease">0</td>
+                  <td id="city-3-disease">0</td>
                 </tr>
               </tbody>
             </table>
@@ -72,20 +76,31 @@
               </thead>
               <tbody>
                 <tr>
+                  <td>Current Location</td>
+                  <td id="currentLocation"></td>
+                </tr>
+                <tr>
                   <td>Actions Remaining</td>
                   <td id="actionCount">0</td>
                 </tr>
                 <tr>
                   <td>Cure Research Completed</td>
-                  <td id="Cairo-disease">0%</td>
+                  <td id="researchPoints">0%</td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
-        <div class="col col-9" id="mapDiv">
+        <div class="col col-10" id="mapDiv">
         <!-- <img src="./map.jpg" alt="the pandemic map"> -->
         </div>
+      </div>
+      <div class="control-panel" id="controlPanel">
+        <br>
+        <button class="btn btn-lg btn-light" id="treatBtn">Treat Infection</button>
+        <button class="btn btn-lg btn-light" id="travelBtn">Travel to a Connecting City</button>
+        <button class="btn btn-lg btn-light" id="researchBtn">Research for a Cure</button>
+        <button class="btn btn-lg btn-light" id="endTurnBtn">End Turn</button>
       </div>
       <div id="gameOverDiv">
         <h2>Game Over</h2>
