implement user interaction to research, treat, and end the turn with infection round

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,10 @@
                   <td>Toronto</td>
                   <td id="city-3-disease">0</td>
                 </tr>
+                <tr>
+                  <td>Total Disease</td>
+                  <td id="total-disease">0</td>
+                </tr>
               </tbody>
             </table>
           </div>
