meets mvp standards

--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,18 @@
         <button class="btn btn-lg btn-light" id="treatBtn">Treat Infection</button>
         <div class="btn-group" role="group">
           <button class="btn btn-lg btn-light dropdown-toggle" id="travelBtn" data-toggle="dropdown">Travel to a Connecting City</button>
-          <div class="dropdown-menu">
-            <button class="dropdown-item" id="la-btn">Los Angeles</button>
-            <a class="dropdown-item" href="#">Tokyo</a>
+          <div id="travelBtns" class="dropdown-menu">
+            <!-- <button class="dropdown-item" id="la-btn">Los Angeles</button> -->
+            <button class="dropdown-item" id="city-0-btn">Tokyo</button>
+            <button class="dropdown-item" id="city-1-btn">Paris</button>
+            <button class="dropdown-item" id="city-2-btn">Seattle</button>
+            <button class="dropdown-item" id="city-3-btn">Toronto</button>
+            <button class="dropdown-item" id="city-4-btn">Baghdad</button>
+            <button class="dropdown-item" id="city-5-btn">Bangkok</button>
+            <button class="dropdown-item" id="city-6-btn">Nairobi</button>
+            <button class="dropdown-item" id="city-7-btn">Rio de Janeiro</button>
+            <button class="dropdown-item" id="city-8-btn">Los Angeles</button>
+            <button class="dropdown-item" id="city-9-btn">Moscow</button>
           </div>
         </div>
         <button class="btn btn-lg btn-light" id="researchBtn">Research for a Cure</button>
