creates a Hard Mode and Hard Mode button depends on win conditions two different buttons and setting variables

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <p>save the world from disease</p>
         <button class="btn btn-lg btn-light" id="newGameButton">Start new game!</button>
         <button class="btn btn-lg btn-light" id="tutorialButton">Read a tutorial!</button>
+        <button class="btn btn-lg btn-light" id="hard">Start on Hard mode..If thy Dare!</button>
         <hr>
       </div>
       <div id="tutorialIsland">
@@ -146,6 +147,7 @@
         </div>
         <button class="btn btn-lg btn-light" id="researchBtn">Research for a Cure</button>
         <button class="btn btn-lg btn-light" id="endTurnBtn">End Turn</button>
+
       </div>
       <div id="gameOverDiv">
         <h2>Game Over</h2>
