--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
           <div id="playerDiv">
             <h4>Player Statistics</h4>
             <p>Current Player: <span id="currentPlayer">1</span></p>
+            <p>Difficulty: <span id="difficulty"></span></p>
             <table>
               <thead>
                 <th>Stat</th>
