changes tutorial instructions

--- a/src/index.html
+++ b/src/index.html
@@ -21,21 +21,21 @@
         </div>
         <div class="border">
           <div>
-            <p class="word">To begin, Pandemic is a strategy game where you are trying to rid the world of a deadly outbreak of a disease. You can travel throughout the world and conduct research on a cure for the disease. Once you develop a cure, you win the game. If you fail to develop a cure and the disease grows too much. You will lose the game.</p>
+            <p class="word"> Pandemic is a strategy game where you are trying to rid the world of a deadly outbreak of a disease. You can travel throughout the world and conduct research on a cure for the disease. Once you develop a cure, you win the game. If you fail to develop a cure and the disease grows too much. You will lose the game.</p>
           </div> 
           <h2>Rules and Gameplay:</h2>
           <ul>
-            <li>Player begins with 4 action points to spend. The player can spend these points by travelling to a differenct city, treating the disease, or conducting research.</li>
+            <li> You begin with 4 action points to spend each turn. You can use these points to control the spread of this new disease, Each action costs one action point so spend wisely.</li>
             <br>
-            <li>To win the game, you must develop a cure and eradicate the disease.</li>
+            <li> At the end of each turn your action points are restored but the disease also spreads! Be careful with cities that have reached three points, as you might have a outbreak on your hands!!</li>
             <br>
-            <li>If the infected population maxes out, you will lose the game.</li>
+            <li> Using Action Points you can travel to one city connected to your current location, You can treat the disease within your current location, or you can research to eradicate the disease once and for all </li>
             <br>
-            <li>When the game starts, 3 cities in the world will be automatically infected.</li>
+            <li> If the infection count reaches 20, humanity is be doomed and you have lost the game.</li>
             <br>
-            <li>You have the option to skip your turn and restore your action points.</li>
+            <li> The game starts with the disease festering in cities across the globe. Choose your path with care so you might control the spread of this outbreak and find a cure!</li>
           </ul>
-          <p class="word">Once again, We here at Epicodus games thank you for choosing to play our game. We worked hard on this game and we believe that it is the greatest game of the new decade. Enjoy Pandemic!!!!!!
+          <p class="word">Once again, We here at Epicodus Games thank you for choosing to play our game. We worked hard on this game and we believe that it is the greatest game of the new decade. Enjoy Pandemic!!!!!!
           </p>
         </div>
         <br>
